# danmaku2ass_native

./: .gitignore  .travis.yml  AssClass.cpp  AssClass.hpp  CMakeLists.txt  README.md  danmaku2ass.cpp  danmaku2ass.h  danmaku2ass.hpp
danmaku2ass.xcodeproj/: project.pbxproj
danmaku2ass.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
danmaku2ass.xcodeproj/project.xcworkspace/xcuserdata/typcn.xcuserdatad/: UserInterfaceState.xcuserstate
danmaku2ass.xcodeproj/xcuserdata/typcn.xcuserdatad/xcschemes/: danmaku2ass.xcscheme  xcschememanagement.plist
tests/: install_lcov.sh  test.sh  testdata.xml
